Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
None
-
None
-
Patch Available
Description
When an unexpected exception occurs, the curently generated processing code re-throws the exception. The net effect of this procedere is that the server closes the entire connection. => This is incorrect. Instead, an TApplicationException should be returned to the client.
Attachments
Attachments
Issue Links
- is related to
-
THRIFT-2975 Graceful handing of unexpected errors
-
- Open
-