THRIFT-2860 Delphi server closes connection on unexpected exceptions Client: Delphi Patch: Jens Geyer